# rag-evaluator

./: .env.example  .gitignore  README.md  SPEC.md  azure-pipelines.yml  pyproject.toml
.github/workflows/: ci.yml
datasets/sample/: eval.jsonl  questions.csv
docs/: architecture.md  cloud-mode.md  configuration.md  contributing.md  datasets.md  evaluators.md  faq.md  getting-started.md  local-mode.md  metrics-catalog.md  modes.md  reporting.md
project-configs/: sample-rag-cloud.yaml  sample-rag-phase2.yaml
project-configs/templates/: project-template.yaml
scripts/: collect_rag_data.py
src/rag_eval_framework/: __init__.py  __main__.py
src/rag_eval_framework/cli/: __init__.py  run.py
src/rag_eval_framework/config/: __init__.py  loader.py  models.py
src/rag_eval_framework/datasets/: __init__.py  loader.py  models.py  validator.py
src/rag_eval_framework/evaluators/: __init__.py  base.py  registry.py
src/rag_eval_framework/evaluators/azure/: __init__.py  adapter.py  completeness.py  groundedness.py  relevance.py  retrieval.py
src/rag_eval_framework/evaluators/builtin/: __init__.py  answer_presence.py  context_presence.py  exact_match_accuracy.py
src/rag_eval_framework/evaluators/judges/: __init__.py  accuracy.py  base.py  citation.py  hallucination.py  policy_compliance.py  prompts.py
src/rag_eval_framework/runners/: __init__.py  base.py  cloud.py  local.py
src/rag_eval_framework/runners/foundry/: __init__.py  adapter.py  normaliser.py
src/rag_eval_framework/utils/: __init__.py  logging.py  normalisation.py
tests/: __init__.py  conftest.py  test_azure_evaluators.py  test_cli.py  test_cloud_runner.py  test_config.py  test_config_phase2.py  test_dataset.py  test_dataset_models.py  test_evaluators.py  test_hardening.py  test_html_report.py  test_judges.py  test_mode_separation.py  test_reports.py  test_runner.py  test_thresholds.py
